packages/sycamore-router-macro/tests/router/router-fail.stderr
error: Router can only be derived on enums
 --> $DIR/router-fail.rs:4:1
  |
4 | struct Router1 {}
  | ^^^^^^

error: not found route not specified
 --> $DIR/router-fail.rs:8:1
  |
8 | enum Router2 {}
  | ^^^^

error: not found route cannot have any fields
  --> $DIR/router-fail.rs:13:13
   |
13 |     NotFound(i32), // Cannot have field
   |             ^^^^^

error: mismatch between number of capture fields and variant fields
  --> $DIR/router-fail.rs:16:10
   |
16 | #[derive(Router)]
   |          ^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
